[project]
name = "pythonlatex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.7",
]

[dependency-groups]
dev = [
    "black>=22.3.0",
    "click>=8.1.3",
    "colorama>=0.4.4",
    "cycler>=0.11.0",
    "cython>=0.29.32",
    "flake8>=4.0.1",
    "fonttools>=4.33.3",
    "jinja2>=3.1.2",
    "kiwisolver>=1.4.2",
    "markupsafe>=2.1.1",
    "matplotlib>=3.5.2",
    "mccabe>=0.6.1",
    "mypy-extensions>=0.4.3",
    "numpy>=1.22.4",
    "ordered-set>=4.1.0",
    "packaging>=21.3",
    "pandas>=1.4.2",
    "pathspec>=0.9.0",
    "pillow>=9.3.0",
    "platformdirs>=2.5.2",
    "pycodestyle>=2.8.0",
    "pyflakes>=2.4.0",
    "pylatex>=1.4.1",
    "pyparsing>=3.0.9",
    "python-dateutil>=2.8.2",
    "pythonlatex>=1.1.2",
    "pytz>=2022.1",
    "six>=1.16.0",
    "tomli>=2.0.1",
]

[tool.uv.sources]
pythonlatex = { workspace = true }
